--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1791,6 +1791,19 @@
   url       = {https://aclanthology.org/2023.emnlp-main.642},
 }
 
+@Article{Amalvy2024a,
+  author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
+  title     = {Renard: A Modular Pipeline for Extracting Character Networks from Narrative Texts},
+  journal   = {Journal of Open Source Software},
+  year      = {2024},
+  volume    = {9},
+  number    = {98},
+  pages     = {6574},
+  doi       = {10.21105/joss.06574},
+  owner     = {Vincent},
+  timestamp = {2023.10.17},
+}
+
 @Article{Amancio2012,
   author    = {Amancio, D. R. and Oliveira, O. N. and da Fontoura Costa, L.},
   title     = {Three-feature model to reproduce the topology of citation networks and the effects from authors' visibility on their h-index},
@@ -4006,7 +4019,18 @@
   url       = {https://books.google.fr/books?id=VKZWAAAAYAAJ},
 }
 
-@Article{Barros2019,
+@InProceedings{Barros2019,
+  author    = {Barros, C. and Vicente, M. and Lloret, E.},
+  title     = {Tackling the Challenge of Computational Identification of Characters in Fictional Narratives},
+  booktitle = {IEEE International Conference on Cognitive Computing},
+  year      = {2019},
+  pages     = {122-129},
+  doi       = {10.1109/iccc.2019.00031},
+  owner     = {Vincent},
+  timestamp = {2024.06.10},
+}
+
+@Article{Barros2019a,
   author    = {Barros, C. and Lloret, E. and Saquete, E. and Navarro-Colorado, B.},
   title     = {{NATSUM}: Narrative abstractive summarization through cross-document timeline generation},
   journal   = {Information Processing \& Management},
@@ -5104,6 +5128,19 @@
   owner     = {Vincent},
   timestamp = {2024.04.27},
   url       = {https://www.oreilly.com/library/view/applied-text-analysis/9781491963036/},
+}
+
+@Article{Bengio1994,
+  author    = {Bengio, Y. and Simard, P. and Frasconi, P.},
+  title     = {Learning long-term dependencies with gradient descent is difficult},
+  journal   = {IEEE Transactions on Neural Networks},
+  year      = {1994},
+  volume    = {5},
+  number    = {2},
+  pages     = {157–166},
+  doi       = {10.1109/72.279181},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @PhdThesis{Bengoetxea2003,
@@ -7392,16 +7429,16 @@
   timestamp = {2019.04.12},
 }
 
-@Article{Botond2023,
+@InCollection{Botond2023,
   author    = {Botond, S. and Bence, V.},
-  title     = {Tragic and Comical Networks. Clustering Dramatic Genres According to Structural Properties},
-  journal   = {arXiv},
-  year      = {2023},
-  volume    = {cs.CL},
-  pages     = {2302.08258},
+  title     = {Tragic and Comical Networks: Clustering Dramatic Genres According to Structural Properties},
+  booktitle = {Computational Drama Analysis: Reflecting on Methods and Interpretations},
+  publisher = {Walter de Gruyter},
+  year      = {2024},
+  pages     = {167-188},
+  doi       = {10.1515/9783111071824-009},
   owner     = {Vincent},
   timestamp = {2023.02.18},
-  url       = {https://arxiv.org/abs/2302.08258},
 }
 
 @Book{Bott1957,
@@ -11464,6 +11501,17 @@
   url       = {https://aclanthology.org/D14-1179.pdf},
 }
 
+@InProceedings{Cho2014b,
+  author    = {Cho, K. and van Merrienboer, B. and Bahdanau, D. and Bengio, Y.},
+  title     = {On the Properties of Neural Machine Translation: Encoder–Decoder Approaches},
+  booktitle = {8th Workshop on Syntax, Semantics and Structure in Statistical Translation},
+  year      = {2014},
+  pages     = {103-111},
+  doi       = {10.3115/v1/w14-4012},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Article{Cho2016,
   author    = {Cho, I. and Dou, W. and Wang, D. X. and Sauda, E. and Ribarsky, W.},
   title     = {VAiRoma: A Visual Analytics System for Making Sense of Places, Times, and Events in Roman History},
@@ -11524,6 +11572,26 @@
   doi       = {10.1016/j.eswa.2012.01.132},
   owner     = {Vincent},
   timestamp = {2022.11.09},
+}
+
+@Book{Chomsky1957,
+  title     = {Syntactic Structures},
+  publisher = {Mouton Publishers},
+  year      = {1957},
+  author    = {Chomsky, N.},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://tallinzen.net/media/readings/chomsky_syntactic_structures.pdf},
+}
+
+@Book{Chomsky1965,
+  title     = {Aspects of the Theory of Syntax},
+  publisher = {MIT Press},
+  year      = {1965},
+  author    = {Chomsky, N.},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://mitpress.mit.edu/9780262530071/aspects-of-the-theory-of-syntax/},
 }
 
 @Book{Chomsky1975,
@@ -17625,6 +17693,19 @@
   timestamp = {2019.08.19},
 }
 
+@Article{Elman1990,
+  author    = {Elman, J. L.},
+  title     = {Finding Structure in Time},
+  journal   = {Cognitive Science},
+  year      = {1990},
+  volume    = {14},
+  number    = {2},
+  pages     = {179-211},
+  doi       = {10.1207/s15516709cog1402_1},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Article{Else1945,
   author    = {Else, G. F.},
   title     = {The Case of the Third Actor},
@@ -20709,6 +20790,20 @@
   doi       = {10.1145/3011549.3011551},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@InProceedings{Fujishima2024,
+  author    = {Fujishima, K. and Shan, J. and Nishihara, Y.},
+  title     = {Events Remembering Support Via Character Relationships’ Visualization of Novels},
+  booktitle = {26th HCI International Conference / Human Interface and the Management of Information},
+  year      = {2024},
+  volume    = {14690},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {24-34},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-031-60114-9_3},
+  owner     = {Vincent},
+  timestamp = {2024.06.08},
 }
 
 @InProceedings{Furini2006,
@@ -28203,6 +28298,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.worldcat.org/title/sociolinguistics-selected-readings/oclc/651225},
 }
 
+@Article{Ibrahim2024b,
+  author    = {Ibrahim, M. and Gervás, P. and Méndez, G.},
+  title     = {Bridging the Past and Future: Extracting Narrative Structures from the 1001 Arabian Nights to Inspire the Generation of New Arabic Tales},
+  journal   = {American Journal of Information Science and Computer Engineering},
+  year      = {2024},
+  volume    = {5},
+  number    = {4},
+  pages     = {360-365},
+  owner     = {Vincent},
+  timestamp = {2024.06.15},
+  url       = {researchgate.net/profile/Mossab-Ibrahim-2/publication/381158085},
+}
+
 @Book{Ichikawa2013,
   title     = {The Shakespearean Stage Space},
   publisher = {Cambridge University Press},
@@ -29417,6 +29525,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@InProceedings{Jiang2020,
+  author    = {Jiang, Z. and Xu, W. and Araki, J. and Neubig, G.},
+  title     = {Generalizing Natural Language Analysis through Span-relation Representations},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {2120-2133},
+  doi       = {10.18653/v1/2020.acl-main.192},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Article{Jianu2010,
   author    = {Jianu, R. and Yu, K. and Cao, L. and Nguyen, V. and Salomon, A. R. and Laidlaw, D. H.},
   title     = {Visual Integration of Quantitative Proteomic Data, Pathways, and Protein Interactions},
@@ -29906,6 +30025,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.08.23},
 }
 
+@Article{Joseph2016,
+  author    = {Joseph, S. R. and Hlomani, H. and Letsholo, K. and Kaniwa, F. and Sedimo, K. Natural language processing: A review. Natural Language Processing: A Review, 6:207–210, 03 2016.},
+  title     = {Natural Language Processing: A Review},
+  journal   = {International Journal of Research in Engineering and Applied Sciences},
+  year      = {2016},
+  volume    = {6},
+  number    = {3},
+  pages     = {207-210},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://www.icts.res.in/sites/default/files/media/media-library/NLPIntro.pdf},
+}
+
 @InProceedings{Joseph2017,
   author    = {Joseph, K. and Wei, W. and Carley, K. M.},
   title     = {Girls Rule, Boys Drool: Extracting Semantic and Affective Stereotypes from Twitter},
@@ -29915,6 +30047,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2998181.2998187},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@InProceedings{Joshi2019,
+  author    = {Joshi, M. and Levy, O. and Zettlemoyer, L. and Weld, D.},
+  title     = {{BERT} for Coreference Resolution: Baselines and Analysis},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  month     = {5803-5808},
+  doi       = {10.18653/v1/d19-1588},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
+@Article{Joshi2020,
+  author    = {Joshi, M. and Chen, D. and Liu, Y. and Weld, D. S. and Zettlemoyer, L. and Levy, O.},
+  title     = {{SpanBERT}: Improving Pre-training by Representing and Predicting Spans},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2020},
+  volume    = {8},
+  pages     = {64-77},
+  doi       = {10.1162/tacl_a_00300},
+  owner     = {Vincent},
+  timestamp = {2021.03.24},
 }
 
 @Article{Josse2008,
@@ -29979,6 +30134,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://books.google.fr/books?id=vdhWenAcwCUC},
+}
+
+@InProceedings{Jozefowicz2015,
+  author    = {Jozefowicz, R. and Zaremba, W. and Sutskever, I.},
+  title     = {An Empirical Exploration of Recurrent Network Architectures},
+  booktitle = {32nd International Conference on Machine Learning},
+  year      = {2015},
+  volume    = {37},
+  series    = {Proceedings of Machine Learning Research},
+  address   = {2342-2350},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://proceedings.mlr.press/v37/jozefowicz15},
 }
 
 @InProceedings{Jugran2021,
@@ -33041,6 +33209,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.12.21},
 }
 
+@InCollection{Krautter2024a,
+  author    = {Krautter, B. and Pagel, J.},
+  title     = {The Schemer in {G}erman Drama: Identification and Quantitative Characterization},
+  booktitle = {Computational Drama Analysis: Reflecting on Methods and Interpretations},
+  publisher = {Walter de Gruyter},
+  year      = {2024},
+  pages     = {123-148},
+  doi       = {10.1515/9783111071824-007},
+  owner     = {Vincent},
+  timestamp = {2024.06.22},
+}
+
 @Article{Kreiman2000,
   author    = {Kreiman, G. and Koch, C. and Fried, I.},
   title     = {Category-specific visual responses of single neurons in the human medial temporal lobe},
@@ -33759,6 +33939,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/237170.237260},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Kurniadi2021,
+  author    = {Kurniadi, K. and Sanjaya E. R., N. A.},
+  title     = {Person Named Entity Recognition in Balinese},
+  journal   = {Jurnal Elektronik Ilmu Komputer Udayana},
+  year      = {2021},
+  volume    = {10},
+  number    = {1},
+  pages     = {99-103},
+  doi       = {10.24843/jlk.2021.v10.i01.p13},
+  owner     = {Vincent},
+  timestamp = {2024.06.10},
 }
 
 @Electronic{Kuroishi2011,
@@ -36857,6 +37050,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.10.11},
 }
 
+@InCollection{Liddy2001,
+  author    = {Liddy, E. D.},
+  title     = {Natural Language Processing},
+  booktitle = {Encyclopedia of Library and Information Science},
+  publisher = {Marcel Decker},
+  year      = {2001},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://surface.syr.edu/istpub/63/},
+}
+
 @Book{Liddy2020,
   title     = {Women in the International Film Industry: Policy, Practice and Power},
   publisher = {Springer},
@@ -37667,6 +37871,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.11.28},
   url       = {https://www.routledge.com/Making-Sense-of-Television-The-Psychology-of-Audience-Interpretation/Livingstone/p/book/9780415185363},
+}
+
+@Article{Lloyd1982,
+  author    = {Lloyd, S.},
+  title     = {Least squares quantization in {PCM}},
+  journal   = {IEEE Transactions on Information Theory},
+  year      = {1982},
+  volume    = {28},
+  number    = {2},
+  pages     = {129-137},
+  doi       = {10.1109/tit.1982.1056489},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @Article{Loan1976,
@@ -41633,6 +41850,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.03},
 }
 
+@Article{Michel2024,
+  author    = {Michel, G. and Epure, E. V. and Hennequin, R. and Cerisara, C.},
+  title     = {Improving Quotation Attribution with Fictional Character Embeddings},
+  journal   = {arXiv},
+  year      = {2024},
+  volume    = {cs.CL},
+  pages     = {2406.11368},
+  owner     = {Vincent},
+  timestamp = {2024.06.19},
+  url       = {https://arxiv.org/abs/2406.11368},
+}
+
 @InProceedings{Mihalcea2005,
   author    = {Mihalcea, R.},
   title     = {Unsupervised large-vocabulary word sense disambiguation with graph-based algorithms for sequence data labeling},
@@ -43880,6 +44109,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1075/li.30.1.03nad},
   owner     = {Vincent},
   timestamp = {2018.04.25},
+}
+
+@Article{Nagaraj2022,
+  author    = {Nagaraj, A. and Kejriwal, M.},
+  title     = {Dataset for studying gender disparity in English literary texts},
+  journal   = {Data in Brief},
+  year      = {2022},
+  volume    = {41},
+  pages     = {107905},
+  doi       = {10.1016/j.dib.2022.107905},
+  owner     = {Vincent},
+  timestamp = {2024.06.10},
 }
 
 @PhdThesis{Nagel2011,
@@ -46801,7 +47042,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
-@InProceedings{Park2018,
+@Article{Park2018,
+  author    = {Park, T. and Kim, S.-H.},
+  title     = {Novel Character Identification Utilizing Semantic Relation with Animate Nouns in Korean},
+  journal   = {ACM Transactions on Asian and Low-Resource Language Information Processing},
+  year      = {2018},
+  volume    = {17},
+  number    = {4},
+  pages     = {30},
+  doi       = {10.1145/3197657},
+  owner     = {Vincent},
+  timestamp = {2024.06.10},
+}
+
+@InProceedings{Park2018a,
   author    = {Park, B. and Ibayashi, K. and Matsushita, M.},
   title     = {Classifying personalities of comic characters based on egograms},
   booktitle = {4th International Symposium on Affective Science and Engineering},
@@ -46986,6 +47240,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://aclweb.org/anthology/papers/D/D08/D08-1069/},
+}
+
+@InProceedings{Pascanu2013,
+  author    = {Pascanu, R. and Mikolov, T. and Bengio, Y.},
+  title     = {On the difficulty of training recurrent neural networks},
+  booktitle = {30th International Conference on Machine Learning},
+  year      = {2013},
+  volume    = {28},
+  number    = {3},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {1310-1318},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://proceedings.mlr.press/v28/pascanu13},
 }
 
 @Article{Pastor-Satorras2001,
@@ -49319,6 +49587,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2021.09.23},
   url         = {https://openai.com/blog/language-unsupervised/},
+}
+
+@TechReport{Radford2019,
+  author      = {Radford, A. and Wu, J. and Child, R. and Luan, D. and Amodei, D. and Sutskever, I.},
+  title       = {Language models are unsupervised multitask learners},
+  institution = {OpenAI},
+  year        = {2019},
+  booktitle   = {2019},
+  owner       = {Vincent},
+  timestamp   = {2024.06.24},
+  url         = {https://insightcivic.s3.us-east-1.amazonaws.com/language-models.pdf},
 }
 
 @InProceedings{Rae2020,
@@ -52235,6 +52514,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/papers/L/L10/L10-1297/},
 }
 
+@InProceedings{Rush2018,
+  author    = {Rush, A.},
+  title     = {The Annotated Transformer},
+  booktitle = {Workshop for NLP Open Source Software},
+  year      = {2018},
+  pages     = {52-60},
+  doi       = {10.18653/v1/w18-2509},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @TechReport{Russell1954,
   author      = {Russell, W. A. and Jenkins, J. J.},
   title       = {The complete Minnesota norms for responses to 100 words from the Kent-Rosanoff Word Association Test},
@@ -52979,6 +53269,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2022.naacl-main.317},
   owner     = {Vincent},
   timestamp = {2024.04.24},
+}
+
+@InProceedings{Sanjaya2024,
+  author    = {Sanjaya E. R., N. A. and Malini, N. L. N. S. and Widiartha, I M. and Mahatagandha, P. C.},
+  title     = {A Balinese folklore digital portal with natural language processing framework},
+  booktitle = {1st International Conference on Applied Mathematics, Statistics, and Computing},
+  year      = {2024},
+  series    = {Advances in Computer Science Research},
+  pages     = {4-16},
+  doi       = {10.2991/978-94-6463-413-6_2},
+  owner     = {Vincent},
+  timestamp = {2024.06.10},
 }
 
 @Article{Sanjek1974,
@@ -58321,6 +58623,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@InProceedings{Swanson2024,
+  author    = {Swanson, D. G. and Bussert, B. D. and Tyers, F.},
+  title     = {Towards Named-Entity and Coreference Annotation of the Hebrew Bible},
+  booktitle = {3rd Workshop on Language Technologies for Historical and Ancient Languages},
+  year      = {2024},
+  pages     = {36-40},
+  owner     = {Vincent},
+  timestamp = {2024.06.19},
+  url       = {https://aclanthology.org/2024.lt4hala-1.5/},
+}
+
 @Article{Sweat2023,
   author    = {Sweat, A. P.},
   title     = {Mise(ère)-en-scène : Transposition and the Child in Hugo's and Ly's Les misérables},
@@ -59085,6 +59398,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jmlr.org/papers/v21/20-091.html},
 }
 
+@Article{Taylor1953,
+  author    = {Taylor, W. L.},
+  title     = {``Cloze Procedure'': A New Tool for Measuring Readability},
+  journal   = {Journalism Quarterly},
+  year      = {1953},
+  volume    = {30},
+  number    = {4},
+  pages     = {415-433},
+  doi       = {10.1177/107769905303000401},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Book{Taylor1970,
   title     = {Balance in Small Groups},
   publisher = {Van Nostrand Reinhold},
@@ -59684,6 +60010,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s10489-020-02115-2},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@InProceedings{Tian2024,
+  author    = {Tian, X. and Konomi, S.},
+  title     = {Recommending Fanfic Works Based on Character Network Disparity Analysis},
+  booktitle = {38th Annual Conference of the Japanese Society for Artificial Intelligence},
+  year      = {2024},
+  pages     = {2N1-GS-4-03},
+  doi       = {10.11517/pjsai.JSAI2024.0_2N1GS403},
+  owner     = {Vincent},
+  timestamp = {2024.06.14},
 }
 
 @InProceedings{TianLan2012,
@@ -60342,6 +60679,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {http://dh2016.adho.org/abstracts/360},
+}
+
+@InCollection{Trilcke2024,
+  author    = {Trilcke, P. and Ustinova, E. and Börner, I. and Fischer, F. and Milling, C.},
+  title     = {Detecting Small Worlds in a Corpus of Thousands of Theater Plays},
+  booktitle = {Computational Drama Analysis: Reflecting on Methods and Interpretations},
+  publisher = {Walter de Gruyter},
+  year      = {2024},
+  pages     = {7-34},
+  doi       = {10.1515/9783111071824-002},
+  owner     = {Vincent},
+  timestamp = {2024.06.12},
 }
 
 @InProceedings{Trovati2014,
@@ -61585,6 +61934,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.ncbi.nlm.nih.gov/pubmed/15883903},
+}
+
+@InProceedings{Vig2019,
+  author    = {Vig, J.},
+  title     = {A Multiscale Visualization of Attention in the Transformer Model},
+  booktitle = {57th Annual Meeting of the Association for Computational Linguistics: System Demonstrations},
+  year      = {2019},
+  volume    = {37-42},
+  doi       = {10.18653/v1/p19-3007},
+  owner     = {Vincent},
+  timestamp = {2021.10.23},
 }
 
 @Article{Vigas2008,
@@ -63199,6 +63559,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@Article{Weizenbaum1966,
+  author    = {Weizenbaum, J.},
+  title     = {{ELIZA}-a computer program for the study of natural language communication between man and machine},
+  journal   = {Communications of the ACM},
+  year      = {1966},
+  volume    = {9},
+  number    = {1},
+  pages     = {36-45},
+  doi       = {10.1145/365153.365168},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Book{Wellhausen1883,
   title     = {Prolegomena to the history of Israel},
   publisher = {Reimer},
@@ -63580,6 +63953,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/997939.998008},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@InProceedings{Wiegreffe2019,
+  author    = {Wiegreffe, S. and Pinter, Y.},
+  title     = {Attention is not not Explanation},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  month     = {11-20},
+  doi       = {10.18653/v1/d19-1002},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @InProceedings{Wieneke2014,
@@ -64528,6 +64912,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3474085.3475684},
   owner     = {Vincent},
   timestamp = {2023.04.14},
+}
+
+@Article{Wu2024,
+  author    = {Wu, H. and Zhang, L. and Huang, Z. and Chen, Z. and Yang, W. and Tong, X. and Shen, Y. and Lin, B. and Li, S.},
+  title     = {Unraveling minnan imagery: a comprehensive analysis of traditional and modern minnan nursery rhymes through complex networks},
+  journal   = {Heritage Science},
+  year      = {2024},
+  volume    = {12},
+  pages     = {180},
+  doi       = {10.1186/s40494-024-01300-7},
+  owner     = {Vincent},
+  timestamp = {2024.06.07},
 }
 
 @Article{Wyer1984,
