--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -635,6 +635,18 @@
   timestamp = {2019.04.13},
 }
 
+@Article{Agerri2016a,
+  author    = {Agerri, R. and Rigau, G.},
+  title     = {Robust multilingual Named Entity Recognition with shallow semi-supervised features},
+  journal   = {Artificial Intelligence},
+  year      = {2016},
+  volume    = {238},
+  pages     = {63-82},
+  doi       = {10.1016/j.artint.2016.05.003},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Article{Aggarwal2014,
   author    = {Aggarwal, C. and Subbian, K.},
   title     = {Evolutionary Network Analysis: A Survey},
@@ -3509,6 +3521,18 @@
   owner     = {Vincent},
   timestamp = {2023.01.09},
   url       = {https://aclanthology.org/D13-1178/},
+}
+
+@InProceedings{Balasuriya2009,
+  author        = {Balasuriya, D. and Ringland, N. and Nothman, J. and Murphy, T. and Curran, J. R.},
+  title         = {Named entity recognition in Wikipedia},
+  booktitle     = {People's Web - Workshop on The People's Web Meets NLP: Collaboratively Constructed Semantic Resources},
+  year          = {2009},
+  pages         = {10-18},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2013.01.16},
+  url           = {http://dl.acm.org/citation.cfm?id=1699767},
 }
 
 @Book{Baldick2008,
@@ -19027,6 +19051,17 @@
   doi       = {10.1109/JSTSP.2014.2365765},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@InProceedings{Feng2021,
+  author    = {Feng, S. and Gangal, V. and Wei, J. and Chandar, S. and Vosoughi, S. and Mitamura, T. and Hovy, E.},
+  title     = {A Survey of Data Augmentation Approaches for {NLP}},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2021},
+  pages     = {968-988},
+  doi       = {10.18653/v1/2021.findings-acl.84},
+  owner     = {Vincent},
+  timestamp = {2022.01.20},
 }
 
 @Article{Fenner2007,
@@ -63483,6 +63518,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.04},
 }
 
+@InCollection{Weischedel2009,
+  author    = {Weischedel, R. and Hovy, E. H. and Marcus, M. and Palmer, M. and Belvin, R. and Pradhan, S. and Ramshaw, L. and Xue, N.},
+  title     = {{OntoNotes}: A Large Training Corpus for Enhanced Processing},
+  booktitle = {Handbook of Natural Language Processing and Machine Translation},
+  publisher = {Springer},
+  year      = {2009},
+  owner     = {Vincent},
+  timestamp = {2024.01.31},
+  url       = {https://www.cs.cmu.edu/~hovy/papers/09OntoNotes-GALEbook.pdf},
+}
+
 @TechReport{Wei-Skillern2008,
   author      = {Wei-Skillern, J. and Marciano, S.},
   title       = {Primer on the US television industry},
@@ -65315,6 +65361,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://www.tib.eu/en/search/id/BLCP%3ACN055695260/Changing-Correlations-in-Networks-Assortativity/},
+}
+
+@InProceedings{Yadav2018,
+  author    = {Yadav, V. and Bethard, S.},
+  title     = {A Survey on Recent Advances in Named Entity Recognition from Deep Learning models},
+  booktitle = {27th International Conference on Computational Linguistics},
+  year      = {2018},
+  pages     = {2145-2158},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+  url       = {https://aclanthology.org/C18-1182/},
 }
 
 @Article{Yamada2009,
