--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -11297,6 +11297,17 @@
   timestamp = {2024.04.22},
 }
 
+@InProceedings{Chen2021,
+  author    = {Chen, S. and Aguilar, G. and Neves, L. and Solorio, T.},
+  title     = {Data Augmentation for Cross-Domain Named Entity Recognition},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2021},
+  pages     = {5346-5356},
+  doi       = {10.18653/v1/2021.emnlp-main.434},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @InProceedings{Chen2021h,
   author    = {Chen, Y. and Ling, Z.-H. and Liu, Q.-F.},
   title     = {A Neural-Network-Based Approach to Identifying Speakers in Novels},
@@ -13826,6 +13837,17 @@
   url         = {https://txtlab.org/?p=528},
 }
 
+@InProceedings{Dai2020,
+  author    = {Dai, X. and Adel, H.},
+  title     = {An Analysis of Simple Data Augmentation for Named Entity Recognition},
+  booktitle = {28th International Conference on Computational Linguistics},
+  year      = {2020},
+  pages     = {3861-3867},
+  doi       = {10.18653/v1/2020.coling-main.343},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @InProceedings{Daiku2017,
   author    = {Daiku, Y. and Augereau, O. and Iwata, M. and Kise, K.},
   title     = {Comic story analysis based on genre classification},
@@ -15399,6 +15421,17 @@
   doi       = {10.1109/ICCV.2011.6126306},
   owner     = {Vincent},
   timestamp = {2018.11.11},
+}
+
+@InProceedings{Ding2020a,
+  author    = {Ding, B. and Liu, L. and Bing, L. and Kruengkrai, C. and Nguyen, T. H. and Joty, S. and Si, L. and Miao, C.},
+  title     = {{DAGA}: Data Augmentation with a Generation Approach for Low-resource Tagging Tasks},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  year      = {2020},
+  pages     = {6045-6057},
+  doi       = {10.18653/v1/2020.emnlp-main.488},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @Article{DiPietro2012,
@@ -55639,6 +55672,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@Article{Shorten2019,
+  author    = {Shorten, C. and Khoshgoftaar, T. M.},
+  title     = {A survey on Image Data Augmentation for Deep Learning},
+  journal   = {Journal of Big Data},
+  year      = {2019},
+  volume    = {6},
+  month     = {60},
+  doi       = {10.1186/s40537-019-0197-0},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
+}
+
 @Book{Showalter1977,
   title     = {A Literature of Their Own: British Women Novelists from Bronte to Lessing},
   publisher = {Princeton University Press},
@@ -57476,6 +57521,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.09},
   url       = {https://www.routledge.com/An-Actors-Work-A-Students-Diary/Stanislavski/p/book/9780415422239},
+}
+
+@InProceedings{Stanislawek2019,
+  author    = {Stanislawek, T. and Wróblewska, A. and Wójcicka, A. and Ziembicki, D. and Biecek, P.},
+  title     = {Named Entity Recognition - Is there a glass ceiling?},
+  booktitle = {23rd Conference on Computational Natural Language Learning},
+  year      = {2019},
+  pages     = {624-633},
+  doi       = {10.18653/v1/K19-1058},
+  owner     = {Vincent},
+  timestamp = {2024.05.03},
 }
 
 @Article{Stanoev2011,
@@ -63428,6 +63484,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/bife.2012.23},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Wei2019,
+  author    = {Wei, J. and Zou, K.},
+  title     = {{EDA}: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {6382-6388},
+  doi       = {10.18653/v1/d19-1670},
+  owner     = {Vincent},
+  timestamp = {2024.06.24},
 }
 
 @InProceedings{Wei2022,
