--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -40862,12 +40862,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{McCarthy2018,
   author    = {McCarthy, M. and Curley, D.},
-  title     = {Exploring the nature of the Fráoch saga - An examination of associations with the legendary warrior on Mag naí},
+  title     = {Exploring the nature of the {F}ráoch saga - An examination of associations with the legendary warrior on Mag naí},
   journal   = {Emania},
   year      = {2018},
   pages     = {53-62},
   owner     = {Vincent},
   timestamp = {2022.08.30},
+  url       = {https://www.academia.edu/36622198/Exploring_the_Nature_of_the_Fr%C3%A1och_Saga_An_Examination_of_Associations_with_the_Legendary_Warrior_on_Mag_nA%C3%AD_Emania_24_2018_pp_53_62},
 }
 
 @Article{McCarty2002,
@@ -58875,6 +58876,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.05.10},
 }
 
+@InProceedings{Taille2020,
+  author    = {Taillé, B. and Guigue, V. and Gallinari, P.},
+  title     = {Contextualized Embeddings in Named-Entity Recognition: An Empirical Study on Generalization},
+  booktitle = {European Conference on Information Retrieval},
+  year      = {2020},
+  volume    = {12036},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {383-391},
+  doi       = {10.1007/978-3-030-45442-5_48},
+  owner     = {Vincent},
+  timestamp = {2022.04.29},
+}
+
 @Article{Tajfel1979,
   author    = {Tajfel, H. and Turner, J. C. and Austin, W. G. and Worchel, S.},
   title     = {An integrative theory of intergroup conflict},
@@ -65801,6 +65815,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqab082},
   owner     = {Vincent},
   timestamp = {2021.10.26},
+}
+
+@InProceedings{Yang2022,
+  author        = {Yang, L. and Yuan, L. and Cui, L. and Gao, W. and Zhang, Y.},
+  title         = {FactMix: Using a Few Labeled In-domain Examples to Generalize to Cross-domain Named Entity Recognition},
+  booktitle     = {29th International Conference on Computational Linguistics},
+  year          = {2022},
+  pages         = {5360-5371},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2022.08.30},
+  url           = {https://aclanthology.org/2022.coling-1.476/},
 }
 
 @Article{Yang2022o,
